Configure build and added login page with go templ

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"vite build --watch\" \"tailwindcss -i ./src/index.css -o ./static/index.css --watch\""
+    "dev": "concurrently \"vite build --watch\" \"tailwindcss -i ./src/index.css -o ./assets/index.css --watch\""
   },
   "keywords": [],
   "author": "",
