--- a/.air.toml
+++ b/.air.toml
@@ -1,27 +1,22 @@
 root = "."
-testdata_dir = "testdata"
 tmp_dir = "tmp"
 
 [build]
-  args_bin = []
   bin = "./tmp/main"
-  cmd = "go build -o ./tmp/main ."
-  delay = 0
-  exclude_dir = ["assets", "tmp", "vendor", "testdata", node_modules]
+  cmd = "templ generate && go build -o ./tmp/main ."
+  delay = 1000
+  exclude_dir = ["assets", "tmp", "vendor", "node_modules"]
   exclude_file = []
-  exclude_regex = ["_test.go"]
+  exclude_regex = [".*_templ.go"]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "tpl", "tmpl", "html"]
-  include_file = []
+  include_ext = ["go", "tpl", "tmpl", "templ", "html"]
   kill_delay = "0s"
   log = "build-errors.log"
-  rerun = false
-  rerun_delay = 500
   send_interrupt = false
-  stop_on_error = false
+  stop_on_error = true
 
 [color]
   app = ""
